@@ -1,3 +1,7 @@
+SimpleComplex/Validate 1.x, 2017-08-31
+--------------------------------------
+- challengeRecording: record invalid value when scalar.
+
 SimpleComplex/Validate 1.x, 2017-08-22
 --------------------------------------
 - Validate constructor do not have to populate non-rule methods instance var.
